Fix CSS issues on mobile

--- a/frontend/src/pages/course-selected-page/style.css
+++ b/frontend/src/pages/course-selected-page/style.css
@@ -5,7 +5,7 @@
   -o-background-size: cover;
   background-size: cover;
   display: block;
-  min-height: 100hv;
+  min-height: 100vh;
   clear: both;
 }
 
